<resources>
    <string name="app_name">My Application</string>
    <string name="nav_login">login</string>
    <string name="nav_logout">logout</string>
    <string name="nav_view_locations">view locations</string>
    <string name="nav_edit_locations">edit locations</string>
    <string name="nav_view_inventory">view inventory</string>
    <string name="nav_edit_inventory">view/edit inventory</string>
    <string name="nav_register">register</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="login_button_text">login</string>
    <string name="edit_item_text">Edit Item</string>
    <string name="item_name_text">Item Name</string>
    <string name="item_description_text">Item Description</string>
    <string name="item_location_text">Item Location:</string>
    <string name="item_value_text">Item Value:</string>
    <string name="time_donated_text">Time Donated:</string>
    <string name="item_category_text">Category:</string>
    <string name="insert_text">Insert Text</string>
    <string name="adv_search_text">Advanced Search</string>
    <string name="search_by_text">Search By…</string>
    <string name="location_text">Location</string>
    <string name="category_text">Category</string>
    <string name="price_range_text">Price Range</string>
    <string name="low_price_text">$</string>
    <string name="high_price_text">$$$</string>
    <string name="to_text">to</string>
    <string name="apply_text">Apply</string>
    <string name="cancel_text">Cancel</string>
    <string name="welcome">Welcome</string>
    <string name="get_started">Get started with one of the buttons below</string>
    <string name="more_options">or view side menu for more options</string>
    <string name="view_map">View Map</string>
    <string name="search_items">Search Items</string>
    <string name="location_name">location name</string>
    <string name="location_type">location type</string>
    <string name="location_address">location address</string>
    <string name="location_phone">location phone</string>
    <string name="location_lat_long">location lat_long</string>
    <string name="location_website">location name</string>
    <string name="zip">zip</string>
    <string name="text">text</string>
    <string name="search_options">search options</string>
    <string name="search">search</string>



    <string name="search_hint">search</string>

    <string name="register_button_text">register</string>
    <string name="register_spinner_prompt">user type</string>


    <string-array name="admin_user_register_options">
        <item>employee</item>
        <item>manager</item>
        <item>admin</item>
    </string-array>
    <string-array name="manager_user_register_options">
        <item>employee</item>
    </string-array>

</resources>
